apps/dreon-notification/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dreon-notification-ingress
  namespace: dreon-dev
  labels:
    app: dreon-notification
  annotations:
    kubernetes.io/ingress.class: kong
    konghq.com/strip-path: "false"
spec:
  ingressClassName: kong
  rules:
    - host: api.dreon.local
      http:
        paths:
          - path: /api/v1/notifications
            pathType: Prefix
            backend:
              service:
                name: dreon-notification
                port:
                  number: 8080
